[package]
name = "joca"
version = "0.1.0"
authors = ["Alex Faria"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
dotenv = "0.15.0"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.reqwest]
version = "0.11"
features = ["rustls"]

[dependencies.serenity]
version = "0.10"
default_features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.openssl]
optional = true
version = "0.10"

# https://stackoverflow.com/questions/37375712/cross-compile-rust-openssl-for-raspberry-pi-2
[features]
# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
static_ssl = ['openssl/vendored']
