[package]
name = "joca"
version = "0.1.0"
authors = ["Alex Faria"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
dotenv = "0.15.0"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.reqwest]
version = "0.11"
features = ["rustls"]

[dependencies.serenity]
version = "0.11"
default_features = false
features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
